Fix Inf at repr() and remove evaluation from print()